Wed Aug 17 14:47:35 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ConfigTransports/subscriber.cpp:

          Fix for SunCC compile error.

Tue Aug 16 22:17:00 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/Arrays/publisher.cpp:
        * tools/modeling/tests/Arrays/subscriber.cpp:
        * tools/modeling/tests/CfTopic/publisher.cpp:
        * tools/modeling/tests/CfTopic/subscriber.cpp:
        * tools/modeling/tests/Chained/publisher.cpp:
        * tools/modeling/tests/Chained/subscriber.cpp:
        * tools/modeling/tests/Chained_Data/publisher.cpp:
        * tools/modeling/tests/Chained_Data/subscriber.cpp:
        * tools/modeling/tests/Chained_Topic/publisher.cpp:
        * tools/modeling/tests/Chained_Topic/subscriber.cpp:
        * tools/modeling/tests/Comments/publisher.cpp:
        * tools/modeling/tests/Comments/subscriber.cpp:
        * tools/modeling/tests/CompositeKey/publisher.cpp:
        * tools/modeling/tests/CompositeKey/subscriber.cpp:
        * tools/modeling/tests/CopyTopicQos/publisher.cpp:
        * tools/modeling/tests/CopyTopicQos/subscriber.cpp:
        * tools/modeling/tests/DataLibRef/publisher.cpp:
        * tools/modeling/tests/DataLibRef/subscriber.cpp:
        * tools/modeling/tests/Deep/Down/Reference/publisher.cpp:
        * tools/modeling/tests/Deep/Down/Reference/subscriber.cpp:
        * tools/modeling/tests/DomainZero/publisher.cpp:
        * tools/modeling/tests/DomainZero/subscriber.cpp:
        * tools/modeling/tests/EmptyLibs/publisher.cpp:
        * tools/modeling/tests/EmptyLibs/subscriber.cpp:
        * tools/modeling/tests/Exchange/publisher.cpp:
        * tools/modeling/tests/Exchange/subscriber.cpp:
        * tools/modeling/tests/ExternalPolicies/publisher.cpp:
        * tools/modeling/tests/ExternalPolicies/subscriber.cpp:
        * tools/modeling/tests/InvalidNames/publisher.cpp:
        * tools/modeling/tests/InvalidNames/subscriber.cpp: